# VKDemo

./: .gitignore  CMakeLists.txt  Demo.txt  build_ninja.bat
app/: MinimalLatestApp.cpp  MinimalLatestApp.h
cmake/: CompilerSlangShader.cmake  FindKtxCli.cmake
common/: Common.h  HandlePool.h  Handles.h  TracyProfiling.h
doc/: ARCHITECTURE_BASELINE.md  ARCHITECTURE_FINAL.md  RHI_CURRENT_SCOPE.md
docs/: VKDemo-Tutorial.md
docs/superpowers/plans/: 2026-04-03-gltf-model-rendering.md  2026-04-05-alpha-mode-rendering.md  2026-04-05-camera-module.md  2026-04-05-gbuffer-pbr-rendering.md  2026-04-05-rhi-native-interface-encapsulation.md  2026-04-05-rhi-pass-encapsulation.md  2026-04-06-offscreen-rendering-pipeline.md  2026-04-11-advanced-rendering-pipeline.md  2026-04-13-debug-pass-implementation.md  2026-04-14-csm-shadow-implementation.md  2026-04-18-frame-sync-optimization.md  2026-04-19-draw-loop-optimization.md
docs/superpowers/specs/: 2026-04-03-gltf-model-rendering-design.md  2026-04-05-alpha-mode-rendering-design.md  2026-04-05-camera-module-design.md  2026-04-05-gbuffer-pbr-rendering-design.md  2026-04-05-rhi-native-interface-encapsulation-design.md  2026-04-06-offscreen-rendering-pipeline-design.md  2026-04-13-debug-pass-design.md  2026-04-14-csm-shadow-design.md  2026-04-18-frame-sync-optimization-design.md  2026-04-30-gpu-driven-design.md  2026-05-01-bistro-loading-optimization-design.md  2026-05-08-gpu-driven-engineering-plan.md
gfx/: Context.h  GBuffer.h  ResourceAllocator.cpp  ResourceAllocator.h  SamplerPool.cpp  SamplerPool.h  Swapchain.h
loader/: GltfLoader.cpp  GltfLoader.h  Ktx2Loader.cpp  Ktx2Loader.h  SceneCacheSerializer.cpp  SceneCacheSerializer.h
render/: AsyncLoadingCoordinator.cpp  AsyncLoadingCoordinator.h  BatchUploadContext.cpp  BatchUploadContext.h  BindGroups.cpp  BindGroups.h  CSMShadowResources.cpp  CSMShadowResources.h  Camera.cpp  Camera.h  ClipSpaceConvention.h  DrawPacket.h  DrawStream.cpp  DrawStream.h  DrawStreamDecoder.cpp  DrawStreamDecoder.h  DrawStreamWriter.cpp  DrawStreamWriter.h  FrameSubmission.cpp  FrameSubmission.h  GPUBatchBuilder.cpp  GPUBatchBuilder.h  GPUDrivenRenderer.cpp  GPUDrivenRenderer.h  GPUMeshletBuffer.cpp  GPUMeshletBuffer.h  GPUSceneRegistry.cpp  GPUSceneRegistry.h  HiZDepthPyramid.cpp  HiZDepthPyramid.h  IBLResources.cpp  IBLResources.h  ImguiAxis.cpp  ImguiAxis.h  LightResources.cpp  LightResources.h  MeshPool.cpp  MeshPool.h  MeshletConverter.cpp  MeshletConverter.h  (+17 more)
render/passes/: AnimateVerticesPass.cpp  AnimateVerticesPass.h  CSMShadowPass.cpp  CSMShadowPass.h  DebugPass.cpp  DebugPass.h  DepthPrepass.cpp  DepthPrepass.h  DepthPyramidPass.cpp  DepthPyramidPass.h  ForwardPass.cpp  ForwardPass.h  GBufferPass.cpp  GBufferPass.h  GPUCullingPass.cpp  GPUCullingPass.h  GPUDrivenCSMShadowPass.cpp  GPUDrivenCSMShadowPass.h  GPUDrivenCullingPass.cpp  GPUDrivenCullingPass.h  GPUDrivenDebugPass.cpp  GPUDrivenDebugPass.h  GPUDrivenDepthPrepass.cpp  GPUDrivenDepthPrepass.h  GPUDrivenDepthPyramidPass.cpp  GPUDrivenDepthPyramidPass.h  GPUDrivenForwardPass.cpp  GPUDrivenForwardPass.h  GPUDrivenGBufferPass.cpp  GPUDrivenGBufferPass.h  GPUDrivenImguiPass.cpp  GPUDrivenImguiPass.h  GPUDrivenLightCullingPass.cpp  GPUDrivenLightCullingPass.h  GPUDrivenLightPass.cpp  GPUDrivenLightPass.h  GPUDrivenPresentPass.cpp  GPUDrivenPresentPass.h  GPUDrivenVisibilitySortPass.cpp  GPUDrivenVisibilitySortPass.h  (+16 more)
rhi/: RHIBindlessTypes.h  RHICapabilities.h  RHICommandList.h  RHICommandPool.h  RHIDescriptor.h  RHIDevice.h  RHIFrameContext.h  RHIHandles.h  RHIPipeline.h  RHIQueue.h  RHIResourceLifetime.h  RHIShaderReflection.h  RHISurface.h  RHISwapchain.h  RHISynchronization.h  RHITypes.h
rhi/d3d12/: D3D12CommandList.cpp  D3D12CommandList.h  D3D12Descriptor.cpp  D3D12Descriptor.h  D3D12Device.cpp  D3D12Device.h  D3D12FrameContext.cpp  D3D12FrameContext.h  D3D12Pipelines.cpp  D3D12Pipelines.h  D3D12Swapchain.cpp  D3D12Swapchain.h  README.md
rhi/metal/: MetalCommandList.cpp  MetalCommandList.h  MetalDescriptor.cpp  MetalDescriptor.h  MetalDevice.cpp  MetalDevice.h  MetalFrameContext.cpp  MetalFrameContext.h  MetalPipelines.cpp  MetalPipelines.h  MetalSwapchain.cpp  MetalSwapchain.h  README.md
rhi/vulkan/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameContext.cpp  VulkanFrameContext.h  VulkanFrameOps.cpp  VulkanFrameOps.h  VulkanPipelines.cpp  VulkanPipelines.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSynchronization.cpp  VulkanSynchronization.h
shaders/: shader.bitonic_sort.slang  shader.debug.slang  shader.depth_prepass.slang  shader.depth_pyramid.slang  shader.forward.slang  shader.gbuffer.slang  shader.gpu_culling.slang  shader.gpu_scene.slang  shader.light.slang  shader.light_culling.slang  shader.meshlet_culling.slang  shader.shadow.slang  shader.shadow_culling.slang  shader.transparent_visibility_patch.slang  shader_ibl.h  shader_io.h
tools/: compress_resources_bc7_ktx2.cmd  texture_converter.cpp
